Bug 100572 - "back to playlist" link does not work properly
Summary: "back to playlist" link does not work properly
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-01 18:06 UTC by Thomas McGuire
Modified: 2005-10-06 04:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2005-03-01 18:06:35 UTC
Version:            (using KDE Devel)
OS:                Linux

To reproduce:

0. Disable Play Queue 
1. Double-click any playlist
2. Click the album link. Result: Songs from that album are shown, additionally the label in the lower left corner says "Now Playing". So far, everything OK.
3. Click the "back to playlist" link. The label now changes back to the original playlist, but the Collection List is selected now.

The correct behavior would be to select the old playlist instead of the Collection List
Comment 1 Michael Pyne 2005-10-06 04:30:45 UTC
SVN commit 467717 by mpyne:

Fix bug 100572 (Back to playlist link always switches to Collection List) in KDE 3.5.

CCBUG:100572


 M  +5 -1      playlistcollection.cpp  


--- branches/KDE/3.5/kdemultimedia/juk/playlistcollection.cpp #467716:467717
@@ -211,10 +211,14 @@
     else
         m_showMorePlaylist = new SearchPlaylist(this, search, i18n("Now Playing"), false, true);
 
-    m_belowShowMorePlaylist = visiblePlaylist();
+    // The call to raise() below will end up clearing m_belowShowMorePlaylist,
+    // so cache the value we want it to have now.
+    Playlist *belowShowMore = visiblePlaylist();
 
     PlaylistCollection::setupPlaylist(m_showMorePlaylist, QString::null);
     PlaylistCollection::raise(m_showMorePlaylist);
+
+    m_belowShowMorePlaylist = belowShowMore;
 }
 
 void PlaylistCollection::removeTrack(const QString &playlist, const QStringList &files)
Comment 2 Michael Pyne 2005-10-06 04:32:45 UTC
SVN commit 467718 by mpyne:

Backport fix for bug 100572 (Back to playlist link always switches to Collection List) to
KDE 3.4.  It should be present in KDE 3.4.3.

BUG:100572


 M  +5 -1      playlistcollection.cpp  


--- branches/KDE/3.4/kdemultimedia/juk/playlistcollection.cpp #467717:467718
@@ -209,10 +209,14 @@
     else
         m_showMorePlaylist = new SearchPlaylist(this, search, i18n("Now Playing"), false, true);
 
-    m_belowShowMorePlaylist = visiblePlaylist();
+    // The call to raise() below will end up clearing m_belowShowMorePlaylist,
+    // so cache the value we want it to have now.
+    Playlist *belowShowMore = visiblePlaylist();
 
     PlaylistCollection::setupPlaylist(m_showMorePlaylist, QString::null);
     PlaylistCollection::raise(m_showMorePlaylist);
+
+    m_belowShowMorePlaylist = belowShowMore;
 }
 
 void PlaylistCollection::removeTrack(const QString &playlist, const QStringList &files)