Backport fix for bug 100572 (Back to playlist link always switches to Collection List) to KDE 3.4.  It should be present in KDE 3.4.3.

BUG:100572

svn path=/branches/KDE/3.4/kdemultimedia/juk/; revision=467718